opam-version: "2.0"
version: "0.1"
maintainer: "cakemanny"
authors: ["cakemanny"]
homepage: "https://github.com/cakemanny/meg"
bug-reports: "https://github.com/cakemanny/meg/issues"
dev-repo: "git+https://github.com/cakemanny/meg.git"
license: "MIT"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
